--- a/style/footer.css
+++ b/style/footer.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .footer{
     height: 728px;
     background-color: rgba(71, 71, 71, 1);
